tests/invalid_purity/impure_par_conj.err_exp
impure_par_conj.m:022: Purity error: parallel conjunct is [38;5;203mimpure,[39;49m but parallel
impure_par_conj.m:022:   conjuncts must be [38;5;40mpure or semipure.[39;49m
impure_par_conj.m:026: Purity error: parallel conjunct is [38;5;203mimpure,[39;49m but parallel
impure_par_conj.m:026:   conjuncts must be [38;5;40mpure or semipure.[39;49m
